[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ethereum-testing-tools"
version = "0.1.0"
description = "Utilities and scripts for testing Ethereum-based blockchains."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "web3==7.8.0",
    "eth-utils==5.0.0",
    "ckzg==2.0.1",
    "requests==2.31.0",
    "grafana-client==4.3.1",
    "pyyaml",
    "pandas",
]

[project.scripts]
generate-account = "scripts.generate_account:main"
repeat-command = "scripts.repeat_command:main"
setup-blob-test = "scripts.setup_blob_test:main"
consolidation = "scripts.consolidation:main"
send-transactions = "scripts.send_transactions:main"
transfer-tokens = "scripts.transfer_tokens:main"
get-pending-transactions = "scripts.get_pending_transactions:main"
compare-consensys = "scripts.compare_consensys:main"
send-blob-transactions = "scripts.send_blob_transactions:main"
transfer-eth = "scripts.transfer_eth:main"
get-public-key = "scripts.get_public_key:main"
decode-legacy-transaction = "scripts.decode_legacy_transaction:main"
withdrawals = "scripts.withdrawals:main"
voluntary-exits = "scripts.voluntary_exits:main"

[tool.setuptools]
packages = ["scripts"]
